construct eyelid rig - create crv, joints, ikhdl, attach to curve.

--- a/ls-rigging-tools/.project
+++ b/ls-rigging-tools/.project
@@ -3,6 +3,7 @@
 	<name>ls-rigging-tools</name>
 	<comment></comment>
 	<projects>
+		<project>cgm</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
