--- a/trunk/ls-rigging-tools/.project
+++ b/trunk/ls-rigging-tools/.project
@@ -4,6 +4,8 @@
 	<comment></comment>
 	<projects>
 		<project>cgm</project>
+		<project>ngSkinTools</project>
+		<project>pymel</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
