--- a/trunk/ls-rigging-tools/.project
+++ b/trunk/ls-rigging-tools/.project
@@ -7,6 +7,7 @@
 		<project>ngSkinTools</project>
 		<project>ngSkinToolsPlus</project>
 		<project>pymel</project>
+        <project>Red9</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
